# study_glfw

./: README.md
studyGlewApp/: settings.gradle  test.txt
studyGlewApp/app/: CMakeLists.txt  build.gradle
studyGlewApp/app/src/main/: AndroidManifest.xml
studyGlewApp/app/src/main/assets/glsl/: frag.sh  vertex.sh  vertex2.sh
studyGlewApp/app/src/main/cpp/: AlfonsFontRender.cpp  AlfonsFontRender.h  JNIApi.h  JNIRender.cpp  JNIRender.h  Matrix3f.h  Matrix4f.h  SimpleFontRender.cpp  SimpleFontRender.h  freetypelib.cpp  freetypelib.h  glut.h  glutils.h  hbshaper.h  import_gl.c  import_gl.h  main.cpp
studyGlewApp/app/src/main/cpp/alfons/src/alfons/: LineRender.cpp  LineRender.h  TextPaint.h  alfons.h  atlas.cpp  atlas.h  font.h  fontFace.cpp  fontFace.h  fontManager.cpp  freetypeHelper.h  glyph.h  lineLayout.h  quadMatrix.cpp  quadMatrix.h  textBatch.h  textBatcher.cpp  textBatcher.h  textShaper.cpp  textShaper.h  utils.h
studyGlewApp/app/src/main/cpp/alfons/src/alfons/path/: lineSampler.h  splinePath.h
studyGlewApp/app/src/main/cpp/alfons/src/logger/: logger.h
studyGlewApp/app/src/main/cpp/demo/: AlfonsFontRender.cpp  LineRenderDemo.cpp  LineRenderDemo.h  SimpleFontRender.h
studyGlewApp/app/src/main/cpp/render/: GLUtils.cpp  GLUtils.h  basic.cpp  demoRenderer.h  enspiraling.cpp  lineWrap.cpp  renderer.cpp  renderer.h  spiral.h
studyGlewApp/app/src/main/cpp/texture1/: TextureMapSample.cpp
studyGlewApp/app/src/main/java/com/heaven7/android/glew/app/: AbsMainActivity.java  AssetsUtils.java  FontRender.java  IGLRender.java  JNIApi.java  MainActivity.java  RenderActivity.java
studyGlewApp/app/src/main/java/com/heaven7/android/glew/app/render/: AbsNativeRender.java  AirHockeyRenderer.java  Cube.java  CurbeRender.java  FillRender.java  FontRender.java  LightDemoRender.java  LineRenderDemo.java  MultiRender.java
studyGlewApp/app/src/main/java/com/heaven7/android/glew/app/utils/: Colors.java  MatrixUtils.java
studyGlewApp/app/src/main/java/com/heaven7/android/glew/app/view/: CurbeGlSurfaceView.java
studyGlewApp/app/src/main/res/layout/: activity_main.xml
studyGlewApp/app/src/main/res/values/: strings.xml
studyGlewApp/glew/include/GL/: glew.h
studyGlewApp/glues/: glues.h
studyGlewApp/gradle/wrapper/: gradle-wrapper.properties
